--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,17 @@
   --font-mono: var(--font-geist-mono);
 
   /* Custom Styles */
+  /* Color Palettes */
   --color-primary: var(--rsc-primary);
+
+  /* Animations */
+  --animate-fade-in: fade-in 1s linear forwards;
+
+  @keyframes fade-in {
+    100% {
+      opacity: 1;
+    }
+  }
 }
 
 body {
