--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
   --background: #030712;
   --foreground: #f9fafb;
   --rsc-primary: #4f46e5;
+  --rsc-spacing-default-6px: 0.375rem;
   --rsc-spacing-default-10px: 0.625rem;
   --rsc-spacing-default-50px: 3.125rem;
   --rsc-tw-gray-50-opacity-10: #f9fafb10;
@@ -16,6 +17,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --spacing-spacing-default-6px: var(--rsc-spacing-default-6px);
   --spacing-spacing-default-10px: var(--rsc-spacing-default-10px);
   --spacing-spacing-default-50px: var(--rsc-spacing-default-50px);
 
