--- a/app/globals.css
+++ b/app/globals.css
@@ -4,19 +4,25 @@
   --background: #030712;
   --foreground: #f9fafb;
   --rsc-primary: #4f46e5;
+  --rsc-tw-gray-50-opacity-10: #f9fafb10;
+  color-scheme: dark;
+
+  --rsc-spacing-default-1px: 0.0625rem;
   --rsc-spacing-default-6px: 0.375rem;
   --rsc-spacing-default-10px: 0.625rem;
   --rsc-spacing-default-50px: 3.125rem;
-  --rsc-tw-gray-50-opacity-10: #f9fafb10;
-  color-scheme: dark;
 }
 
 @theme inline {
-  --color-primary: var(--rsc-primary);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: var(--rsc-primary);
+  --color-color-default: var(--rsc-tw-gray-50-opacity-10);
+
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  --border-spacing-default-1px: var(--rsc-spacing-default-1px);
   --spacing-spacing-default-6px: var(--rsc-spacing-default-6px);
   --spacing-spacing-default-10px: var(--rsc-spacing-default-10px);
   --spacing-spacing-default-50px: var(--rsc-spacing-default-50px);
