--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,9 @@
   --background: #030712;
   --foreground: #f9fafb;
   --rsc-primary: #4f46e5;
+  --rsc-tw-gray-50: #f9fafb;
   --rsc-tw-gray-50-opacity-10: #f9fafb10;
+  --rsc-tw-gray-50-opacity-50: #f9fafb50;
   color-scheme: dark;
 
   --rsc-spacing-default-6px: 0.375rem;
@@ -16,7 +18,8 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-primary: var(--rsc-primary);
-  --color-color-default: var(--rsc-tw-gray-50-opacity-10);
+  --color-default: var(--rsc-tw-gray-50);
+  --color-default-opacity-50: var(--rsc-tw-gray-50-opacity-50);
 
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
