--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,8 @@
   --rsc-spacing-default-6px: 0.375rem;
   --rsc-spacing-default-10px: 0.625rem;
   --rsc-spacing-default-20px: 1.25rem;
+
+  --rsc-border-radius-default-8px: 0.5rem;
 }
 
 @theme inline {
@@ -27,6 +29,9 @@
   --spacing-spacing-default-6px: var(--rsc-spacing-default-6px);
   --spacing-spacing-default-10px: var(--rsc-spacing-default-10px);
   --spacing-spacing-default-20px: var(--rsc-spacing-default-20px);
+
+  --radius-card-default-8px: var(--rsc-border-radius-default-8px);
+  --radius-border-default-8px: var(--rsc-border-radius-default-8px);
 
   --default-transition-duration: 200ms;
   --default-transition-timing-function: linear;
