--- a/app/globals.css
+++ b/app/globals.css
@@ -1,51 +1,56 @@
 @import "tailwindcss";
 
 :root {
-  --background: rgba(3, 7, 18, 1);
-  --foreground: rgba(249, 250, 251, 1);
+  --background: rgba(249, 250, 251, 1);
+  --foreground: rgba(3, 7, 18, 1);
   --rsc-primary: rgba(79, 70, 229, 1);
-  --rsc-tw-gray-50: rgba(249, 250, 251, 1);
-  --rsc-tw-gray-50-opacity-10: rgba(249, 250, 251, 0.08);
-  --rsc-tw-gray-50-opacity-50: rgba(249, 250, 251, 0.5);
-  color-scheme: dark;
-
-  --rsc-spacing-default-6px: 0.375rem;
-  --rsc-spacing-default-10px: 0.625rem;
-  --rsc-spacing-default-20px: 1.25rem;
-
-  --rsc-border-radius-default-8px: 0.5rem;
+  --rsc-error: rgba(251, 44, 54, 1);
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-primary: var(--rsc-primary);
-  --color-default: var(--rsc-tw-gray-50);
-  --color-default-opacity-50: var(--rsc-tw-gray-50-opacity-50);
+  --color-error: var(--rsc-error);
 
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-
-  --spacing-spacing-default-6px: var(--rsc-spacing-default-6px);
-  --spacing-spacing-default-10px: var(--rsc-spacing-default-10px);
-  --spacing-spacing-default-20px: var(--rsc-spacing-default-20px);
-
-  --radius-default-8px: var(--rsc-border-radius-default-8px);
 
   --default-transition-duration: 200ms;
   --default-transition-timing-function: linear;
 
   --animate-fade-in: fade-in 1s linear forwards;
+  --animate-fade-out: fade-out 1s linear forwards;
 
   @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+
     100% {
       opacity: 1;
     }
   }
+
+  @keyframes fade-out {
+    0% {
+      opacity: 1;
+    }
+
+    100% {
+      opacity: 0;
+    }
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: rgba(3, 7, 18, 1);
+    --foreground: rgba(249, 250, 251, 1);
+  }
 }
 
 body {
-  overflow-x: hidden;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
